WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153130
[GTK] GVariant runtime critical errors when encoding session data
https://bugs.webkit.org/show_bug.cgi?id=153130
Summary
[GTK] GVariant runtime critical errors when encoding session data
Carlos Garcia Campos
Reported
2016-01-15 08:24:32 PST
It happens when the FrameState has children, because the recursive serialization is wrong. (epiphany:19881): GLib-CRITICAL **: g_variant_builder_open: assertion '!GVSB(builder)->expected_type || g_variant_type_is_subtype_of (type, GVSB(builder)->expected_type)' failed (epiphany:19881): GLib-CRITICAL **: g_variant_builder_add_value: assertion '!GVSB(builder)->expected_type || g_variant_is_of_type (value, GVSB(builder)->expected_type)' failed (epiphany:19881): GLib-CRITICAL **: g_variant_builder_add_value: assertion '!GVSB(builder)->expected_type || g_variant_is_of_type (value, GVSB(builder)->expected_type)' failed (epiphany:19881): GLib-CRITICAL **: g_variant_builder_add_value: assertion '!GVSB(builder)->expected_type || g_variant_is_of_type (value, GVSB(builder)->expected_type)' failed (epiphany:19881): GLib-CRITICAL **: g_variant_builder_add_value: assertion '!GVSB(builder)->expected_type || g_variant_is_of_type (value, GVSB(builder)->expected_type)' failed (epiphany:19881): GLib-CRITICAL **: g_variant_builder_open: assertion '!GVSB(builder)->expected_type || g_variant_type_is_subtype_of (type, GVSB(builder)->expected_type)' failed
Attachments
Patch
(5.23 KB, patch)
2016-01-15 08:30 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Updated patch
(5.81 KB, patch)
2016-01-15 08:44 PST
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-01-15 08:30:57 PST
Created
attachment 269055
[details]
Patch
WebKit Commit Bot
Comment 2
2016-01-15 08:32:07 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2016-01-15 08:44:03 PST
Created
attachment 269060
[details]
Updated patch The decode part also needed to be fixed.
Carlos Garcia Campos
Comment 4
2016-01-16 01:37:05 PST
Committed
r195166
: <
http://trac.webkit.org/changeset/195166
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug