[GTK] GVariant runtime critical errors when encoding session data https://bugs.webkit.org/show_bug.cgi?id=153130

Reviewed by Michael Catanzaro.

It happens when the FrameState has children, because the recursive
serialization is wrong. Also fix serialization of
documentSequenceNumber and itemSequenceNumber that are gint64, not
guint64.

* UIProcess/API/gtk/WebKitWebViewSessionState.cpp:
(encodeFrameState): Let the caller open/init the given
builder. Use a new builder to encode child states recursively.
(encodePageState): Do the builder open/close for the FrameState encoding.
(decodeFrameState): Get the variant of every child.

Canonical link: https://commits.webkit.org/171250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195166 268f45cc-cd09-0410-ab3c-d52691b4dbfc